--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "next-js-boilerplate",
-  "author": "Ixartz (https://github.com/ixartz)",
+  "name": "next-boilerplate",
   "engines": {
     "node": ">=20"
   },
